--- a/RDataViz.Rmd
+++ b/RDataViz.Rmd
@@ -29,7 +29,7 @@ Though unintuitive at first, R offers a powerful way to visualize large data set
 
 * It silos public data in the hands of private corporations, creating a dependency on one organization. Why should ESRI get to monitise data collected by public entities using public tax dollars?
 
-* In this document, I hope to show you the basics of data visualizations in R so that you can keep making maps and graphs even after we loose educational ArcGIS and Adobe licenses.
+In this document, I hope to show you the basics of data visualizations in R so that you can keep making maps and graphs even after we loose educational ArcGIS and Adobe licenses.
 
 ## Basics of ggplot
 
@@ -89,25 +89,32 @@ philly_commute.2022 <- get_acs(
   )
 ```
 
+Lets go over the steps in this chunk. First, I create a vector that stores all the variables that I want from the ACS. Here, the variables are from the B08006 table. In the vector, I also specify the clean variable names I want each data to be associated to. 
+
+Then, I call the 2022 Philadelphia ACS, asking it to extract the variables stored in my vector. After the data has been called, I create new columns that calculate the commute share: here, it is calculated by dividing the estimate of people who Walked to work with the number of total workers. 
+
+Another thing I have to do here is to only select the mode share columns I calculated previously and pivot my table. At the end, my final data set has two columns—a column called Mode that contains the names of the selected commute shares column, and another called Percentage that stores the percentage data. Restructuring our data like so is very important as ggplot needs the data to be clearly structured into X and Y columns.  
+
 Now that our data is set up, let us begin by creating a rough plot. ggplot works by layering objects on top of one another, so we start by specifying the data layer (here being bars of the bar chart).
 
 ```{r pressure, echo=FALSE}
 plot1 <- ggplot(philly_commute.2022, 
        aes(x = mode, y = percentage)) + #specify what you want to be plotted as x and y
   geom_bar( #specify the geometry of the plot, here it is bar chart
-    stat = "identity", #stat here means what staistical function to use on the data
+    stat = "identity", #stat here means what statistical function to use on the data
     #here identity means use the values as it
     fill = "#2F4858", #fill color, can be named values ("red","green) or hex codes
     width = 0.7) #the size of each bar
 
 plot1
 ```
+Notice that when specifying the aesthetics, I assign the mode column as the X data and percentage column as the Y data. This helps ggplot recognise what data to put where—in the plot above, you see that all the mode names are in the X axis and all the percentage values are in Y axis. Flip it around to see how the data changes. 
 
-R has more than 600 named colours that it recognizes. A list of all such colours can be found [here](https://www.datanovia.com/en/blog/awesome-list-of-657-r-color-names/).
+Whens specifying the fill colour, you can use either a hex code or a named colour in quotes. R has more than 600 named colours that it recognizes. A list of all such colours can be found [here](https://www.datanovia.com/en/blog/awesome-list-of-657-r-color-names/).
 
 Now that we have our base chart, we can begin our customizations. Lets start by geom_label (or geom_text) which adds text labels to our chart objects.
 
-```{r}
+```{r }
 plot1+
   geom_text(#sets the text layer on top of the plot
     aes(label = paste0((round(percentage, 1)), "%")),#here, we want the y label to be percentage
@@ -115,10 +122,14 @@ plot1+
     nudge_y = 3, #we want the text to go up by 4 pixels
   )
 ```
+Here, I specify the label text to be paste0((round(percentage, 1)), "%")). Lets break this command down:
 
-We have our text labels! Stylistically I prefer using the geom_label function instead of geom_text as it renders labels with a filled background. So lets replace that.
+* paste0(): This function combines all the variables within it to create one string. As the two variables here are the rounded percentage and %, the label would be "[PERCENT]%"
+* round(percentage, 1): This rounds the value in the percentage column to 1 decimal place. 
 
-```{r}
+Now, we have our text labels! Stylistically I prefer using the geom_label function instead of geom_text. They are not too different, but geom_label renders text with a filled background which I think look cleaner.
+
+```{r }
 plot1 <- plot1 +
   geom_label(
     aes(label = paste0((round(percentage,1)), "%")), 
@@ -126,14 +137,20 @@ plot1 <- plot1 +
     nudge_y = 4, # move y by 4 px
     fill = "#F6AE2D", #this sets the fill color
     color = "white", #this sets the font color
-    alpha = 0.9) #make the label transparent
+    alpha = 0.9) #adjusts the transparency to 0.9 from 1, with 1 being fully opaque
 
 plot1
 ```
+Here, my geom_label command has two arguments that specify the position/size of my labels. Though both of these arguements take numbers, they are slightly different.
+
+* size specifies the font size of the labels. By default, it interprets the input as being in mm. So when I specify size to be 4, I am asking R to make the labels be 4mm. 
+* nudge_y tells R where to move the position of the labels relative to the default position. At y = 0, the label will be exactly on the top of the bars. When I specify nudge_y = 4, I am asking R to move the label by 4. Here, 4 is a measure of units in the y axis. If the bar ends at y = 10, a command of nudge_y = 4 would move the label at y = 14. 
+
+The different units used in positioning is tough to wrap your head around, but don't worry, everyone struggles with it! You just get better at remembering it through trial and error.  The rule of thumb to use is that when specifying sizes of anything (dots, lines, fonts), R interprets the numbers as mm and when specifying the position of anywhere (where it is on the plot) R takes in X and Y values. 
 
 Now, lets add more text to our plot, i.e. change the labels using the labs() command.
 
-```{r}
+```{r }
 plot1 <- plot1 +
     labs( #set the labels for the chart
     title = "How Philadelphia Commutes to Work",
@@ -146,30 +163,30 @@ plot1 <- plot1 +
 plot1
 ```
 
-The next thing you will need to do is specify the themes, which are other stylistic elements of the chart. Themes are where you would adjust other elements of the chart such as gridlines, text positions etc. You can choose between preset R themes, specify your own thing, or do both! There are a lot of themes you can choose from.
+The next thing you will need to do is specify the themes, whichh specify the design of other stylistic chart elements. You can choose between preset R themes, specify your own theme, or do both! There are a lot of themes you can choose from.
 
-```{r}
+```{r }
 plot1 +
   theme_linedraw()
 ```
 
-```{r}
+```{r }
 plot1 + 
   theme_classic()
 ```
 
 Personally, I prefer theme_minimal, so that is what we will use for the plot.
 
-```{r}
+```{r }
 plot1 <- plot1 +
   theme_minimal()
 
 plot1
 ```
 
-I prefer using the minimal theme alongside customizing other elements (such as fonts) using the theme function. Using the packages showtext and sysfonts, you can import google fonts or any other system fonts downloaded on your device.
+Think about preset themes as templates that you can customize. For my plot, I want to change the font as well as the gridlines, which I do so using the theme() function. showtext and sysfonts are two packages that I use to call in new fonts to my R environment. Here, I want to call "IBM Plex Sans" which is a google font using the font_add_google() command. After calling the font, you also have to run the command showtext_auto, which initializes it to the environment. 
 
-```{r}
+```{r }
 #first, lets call in our packages
 p_load(showtext,sysfonts)
 
@@ -188,9 +205,9 @@ plot1 +
     axis.text = element_text(size = 11, family = "IBM Plex Sans", color = "#2F4858"))
 ```
 
-The theme command gives you quite a lot of freedom to change the elements in your plot! I would encourage you to explore it further. For now, I want to adjust my gridlines and other plot elements.
+The theme command gives you quite a lot of freedom to change the elements in your plot! There are dozens of arguements that you can specify in the theme command. You can find a list of all of them [here](https://ggplot2.tidyverse.org/reference/theme.html). I would encourage you to explore it further. 
 
-```{r}
+```{r }
 plot1 <- plot1 +
     theme_minimal() + #sets a larger theme, google ggplot themes to see the options
   theme(
@@ -203,7 +220,7 @@ plot1 <- plot1 +
     panel.grid.minor = element_blank(), #get rid of minor gridlines
     plot.margin = margin(10, 10, 10, 10), # add padding
     plot.caption = element_text(size = 8, margin = margin(t = 10)), #pad down caption
-    panel.grid.major.y = element_line(color = "#F6AE2D", size = 0.2, 
+    panel.grid.major.y = element_line(color = "#F6AE2D", linewidth = 0.3, 
                                       linetype = "dotted"), 
     #have y grids
     panel.grid.major.x = element_blank() #and get rid of x axis grids
@@ -211,8 +228,15 @@ plot1 <- plot1 +
 
 plot1
 ```
+Lets go over the commands that I specify:
 
-And there is my plot! I can now export this chart to put in any document I see fit using the ggsave function. You can export it as a jpeg, a png, a pdf, or a svg to further edit in other software!
+* text: Sets the global format style for all text in the plot (except axis text). This modies the titles, subtitles, and caption. Here, I want the font family to be IBM Plex Sans, and the colour to be blue. 
+* plot.title and plot.subtitle: Sets the text style for the title and subtitle. I want my title to be bolded, and be of size 16 (mm).
+* axis.text: The text command however doesn't affect axis text, which is recognized by R to be a different thing. Hence, I specify the format for them here. 
+* panel.grid.minor, panel.grid.major.y, panel.grid.major.x: These functions affect the gridlines of the plot. Gridlines are the horizontal and verticles lines we see in the plot. In R, there are major gridlines and minor gridlines. element_blank() makes these gridlines invisible, whereas element_line() helps me specify the formatting of the grid lines. R is a bit weird with gridlines—when it says panel.grid.major.y, it means the lines that are coming out from the y axis, NOT vertical lines (as one would assume). Play around with the functions to see how it affects the plot. 
+* plot.margin(): Adds 10 units padding on all sides. Here, the margin units are in points, which is a printing measure. 
+
+And there is my plot! I can now export this chart to put in any document I see fit using the ggsave function. You can export it as a jpeg, a png, a pdf, or a svg to further edit in other software! You can also use the bg command to specify the transparency of the background.
 
 ```{r}
 ggsave(plot = plot1,
@@ -223,7 +247,7 @@ ggsave(plot = plot1,
        height = 5) #height of the image
 ```
 
-A note of caution is that your saved plot might end up looking very different than your plot output in quarto. This happens because quarto will compress image outputs. Hence, you may need to play around with sizes of fonts and such in order to make your final plot look good.
+A note of caution is that your saved plot might end up looking very different than your plot output in quarto. This happens because R will compress image outputs when displayed in the plot window, but show the actual size when saved to your device. Hence, you may need to play around with sizes of fonts and such in order to make your final plot look good.
 
 Great, I hope you now understand what we mean when we say ggplot layers—its not too different than illustrator layers! Think of ggplot commands as steps you would need to do in illustrator—only here instead of mouse clicks, you memorize the steps instead. Lets move on to another example. As before, I call in my data and arrange it in the correct structure.
 
@@ -250,6 +274,8 @@ plot2_data <- get_acs(
   filter(!is.na(Income))
 ```
 
+The steps I follow are similar to one I use previously. The only key change is that I filter all census tracts where we do not have a Median Household Income value. 
+
 For this plot, I want to use a new google font called Jost. I will not show how to call system fonts in this document as it is slightly complicated and I don't know how you would do it on a windows device. However, if you are interested, you can read about it [here](https://www.cararthompson.com/posts/2024-01-12-using-fonts-in-r-for-dataviz/2024-01-12_getting-fonts-to-work).
 
 I also call in the package scales, which is a nifty little tool to get various metrics (percentage, money) formatted to look pretty in your plot.
@@ -261,14 +287,15 @@ showtext_auto()
 p_load(scales)
 ```
 
-Here, I am plotting a scatter plot. The scales package is especially useful when I am setting the labels of my x axis. Here, I use it shorten dollar amounts to the first three numbers and add the suffix k behind it.
+Here, I am plotting a scatter plot. Again, play around with replacing the x and y values to see how the plot changes. To create a scatterplot, I use the geom_point function. The arguements of this function is the same as the ones for the bar_chart. 
 
-```{r}
+The scales package is especially useful when I am setting the labels of my x axis. Here, I use it shorten dollar amounts to the first three numbers and add the suffix k behind it.
+
+```{r }
 plot2 <- ggplot(plot2_data,
        aes(x = Income, 
            y = Transit))+
   geom_point(
-    stat = "identity",
     colour = "dodgerblue4",
     alpha = 0.6,
     size = 1.5
@@ -288,7 +315,7 @@ plot2
 
 The rest of this section is about setting the theme and customisations. Here, I set the fill of the plot to a different colour. However, this means that I won't be able to export it as a transparent png.
 
-```{r}
+```{r }
 plot2+ 
   theme_minimal()+
   theme(
@@ -344,7 +371,7 @@ plot3data <- affordablehousing %>%
 
 As before, we manipulate our data and get it ready to plot. We also follow similar steps as before to create our base plot, with two key command differences. In this chart, I used scale_fill_manual to manually set the colours of my categorial data.
 
-```{r}
+```{r }
 plot3 <- ggplot(plot3data,
        aes(x = PROJECT_TYPE, 
            y = total_units,
@@ -357,7 +384,7 @@ plot3 <- ggplot(plot3data,
   geom_label(
     aes(label = total_units), 
     size = 4, 
-    nudge_y = 4,
+    nudge_y = 10,
     fill = "#e9c46a",
     color = "white",
     alpha = 0.9) +
@@ -383,22 +410,27 @@ plot3 <- ggplot(plot3data,
 
 plot3
 ```
+A thing to note is that animate doesn't recognize any font asides from system fonts. I think it is possible to fight R on this, but for the sake of time I will resort to using system defaults. 
 
 The above section however, just gives me the rough plot of my chart. If you print it, it looks very weird because all the unit values from various years are mapped on top of one another. To animate it, you would need to add the following sections.
 
 ```{r}
 plot3 <- plot3 +
   #the segments that allow you to animate
-  transition_states(Year, #the variable which will define the frames of animation 
-                    #or "states". Here, the gif moves between various Years in ach frame
-                    transition_length = 30, #the length of each transition
-                    state_length = 20) + #how long the state should last
+  transition_states(Year) #the variable which will define the frames of animation 
+                    #or "states". Here, the gif moves between various Years in ach frame) 
   ease_aes('linear') #the style of animating
 ```
 
+The two commands for gganimate is the transition_states, which tells R which variable to animate on. Here, I specify it as Year as I want the animation to move through the Year values. 
+
+When you specify the animation in the next section, you can change the number of frames and frames per second. Play around with those commands to see how the speed of the gif changes.
+
+ease_aes tells us the style of animating. These are pre-set styles, and you can see how the plot changes with the alternatives.
+
 I will not go too much into the details of gganimate because it is vast and you really only get better at it through trial and error. You can find a really good cheatsheet [here](https://rstudio.github.io/cheatsheets/gganimate.pdf) if you are curious to learn further.
 
-In short, to animate, you will just need to specify the variable through which you want to transition (here defined as Year). Once you have your specifications, you can render your gif using the animate command.
+Once you have your specifications, you can render your gif using the animate command as well as save it using the anim_save command. R doesn't let me knit the document with this section so I have commented them out for the time being. You can uncomment them and run them in the markdown.
 
 ```{r}
 #uncomment these sections when you run the markdown
@@ -417,7 +449,7 @@ In short, to animate, you will just need to specify the variable through which y
 
 ![Affordable Housing Through Years](plot3.gif)
 
-You really can do a lot with gganimate! Here is another example, adapted from the gganimate documentation page [here](https://gganimate.com/). In this plot, we will be showing change in life expectancy over GDP per capital in various countries. The dataset to do so is already loaded in R.
+You really can do a lot with gganimate! Here is another example, adapted from the gganimate documentation page [here](https://gganimate.com/). In this plot, we will be showing change in life expectancy over GDP per capital in various countries. The dataset to do so as well as the colour palette that works for each country is already loaded in R, so I just need to call the package and run the code directly.
 
 ```{r}
 #calling a pre-existing dataset in R
@@ -457,6 +489,7 @@ scale_x_log10()+
 ```
 
 ![GDP by Life Expectancy](plot4.gif)
+You can change the size and colour of the dots in a dot plots depending on other variables. In the chart above, I specify that R should change the size of the dots according to the population column and the clour of the dots according to the country name. These are specified in the aes(gdpPercap, lifeExp, size = pop, colour = country) section.
 
 ## Spatial Data with Tigris and Geom_Sf
 
@@ -466,7 +499,7 @@ Okay, now lets try to plot some maps! To start, lets plot a simple chloropleth u
 philly <- tigris::tracts(state = "PA", county = "Philadelphia", year = 2022)
 ```
 
-```{r}
+```{r }
 plot(philly[4])
 ```
 A cool thing about tigris is that it can help you automatically erase sections of the map that would be covered by water. I find that having water bodies erased gives you prettier maps. I also transform the plot into a coordinate reference system more suitable for mapping Philadelphia.
@@ -477,12 +510,17 @@ philly <- philly %>%
   st_transform(2272)
 ```
 
-```{r}
+erase_water is really easy to use—just call the command on the shapefile you want to erase and set the area_threshold, which is a complicated way of measuring how refined you want the erasure to be. The official definition of it is: "The percentile rank cutoff of water areas to use in the erase operation, ranked by size. Defaults to 0.75, representing the water areas in the 75th percentile and up (the largest 25 percent of areas). "
+
+You do not need to specify it, but setting it to a value lower than 0.75 helps speed up some processing. 
+
+```{r }
 plot(philly[4])
 ```
+
 If you notice, now my map has gaps in it to account for water bodies. Another cool thing you can do with tigris is to call polygons of water bodies in an area. Again, I find that this makes for a prettier plot. So lets call the water of all the neighbouring counties and then crop the shapefile to the extent of Philadelphia.
 
-```{r warning=FALSE, message=FALSE, output = FALSE, results='hide'}
+```{r warning=FALSE, message=FALSE, output = FALSE, results='hide' }
 philly_water <- tigris::area_water(state = "PA", county = "Philadelphia", year = 2022)%>%
   rbind(tigris::area_water(state = "PA", county = "Montgomery", year = 2022))%>%
   rbind(tigris::area_water(state = "PA", county = "Delaware", year = 2022))%>%
@@ -494,13 +532,19 @@ philly_water <- tigris::area_water(state = "PA", county = "Philadelphia", year =
   st_crop(st_bbox(st_buffer(philly, dist = 5000))) #buffer so it is philly and a bit more
 ```
 
-```{r}
+```{r }
 ggplot() +
   geom_sf(data = philly, fill = "seashell3", color = NA, alpha = 0.6)+
   geom_sf(data = philly_water, fill = "dodgerblue4", color = "dodgerblue", alpha = 0.6)
 ```
 
-We can also call up the shapefiles of PA and NJ that are adjacent to Philly. We don't need any gridlines or variables in our data, so I specify the theme to be theme_void().
+To plot spatial files using ggplot, we use the geom_sf function which takes the arguement:
+* data: what data file to map
+* fill: what colour or column to fill the map on. If you choose a column that is in the data, it will plot a chloropleth map. To specify a chloropleth map however you have to specify in the aes(fill = Column) function. 
+* color or col: the colour of the outline
+* alpha: the transparency of the object
+
+We can also call up the shapefiles of PA and NJ that are adjacent to Philly. We don't need any gridlines or variables in our data, so I specify the theme to be theme_void().Theme_void() gets rid of all elements in the plot. 
 
 ```{r warning=FALSE, message=FALSE, output = FALSE, results='hide'}
 pa <- tigris::counties(state = "PA", year = 2022)%>%
@@ -515,7 +559,7 @@ jersey <- tigris::states()%>%
   erase_water(area_threshold = 0.8)
 ```
 
-```{r}
+```{r }
 ggplot() +
   geom_sf(data = pa, fill = "seashell3", col = "white", alpha = 0.9)+
   geom_sf(data = jersey, fill = "seashell3", col = "white", alpha = 0.9)+
@@ -524,9 +568,9 @@ ggplot() +
   theme_void()
 ```
 
-Lets plot our data now. To start, lets join it with our philly census tract map and then add it as a layer.
+Lets plot our data now. To start, lets join it with our philly census tract map and then add it as a layer. Here, I join the transit data I called previously with the census tract map, and replace all NAs in the value with 0. 
 
-```{r}
+```{r }
 philly <- philly %>%
   left_join(plot2_data) %>%
   mutate(Transit = case_when(
@@ -554,10 +598,14 @@ plot5 <- ggplot() +
 
 plot5
 ```
+There are a few new things in this plot. Lets go over them:
+
+* scale_fill_gradient: Sets the fill of the chloropleth based on the colours that you specified. Here, the gradient moves from a light pink to a dark pink. 
+* coord_sf(): This sets the limit of the map. Here, I specify the map limit to be the extent of the Philadelphia bounding box. st_bbox(philly)[1] is the top left corner of the bounding box whereas st_bbox(philly)[3] is the top right corner of the bounding box.
 
 Lets now work on our customisations.
 
-```{r}
+```{r }
 plot5 +
   labs(
     title = "Where do Transit Commuters Live in Philadelphia",
@@ -582,9 +630,14 @@ affordablehousing <- st_transform(affordablehousing, 2272)%>%
   )
 ```
 
+Lets go over the steps here. I first transform my affordable housing shapefile to the correct crs. Then, I create two new columns X and Y using mutate. 
+
+* X = st_coordinates(geometry)[,1] here means to fill the column X with the coordinates in geometry. st_coordinates(geometry)[,1] means to take the first column values from the coordinates, which would be the longitudes. 
+* Y = st_coordinates(geometry)[,2] here means to take the second column values in the coordinates, which would be latitudes.
+
 The steps that we would follow is quite similar to what has been outlines previously, except the introduction of a new function (guides). Guides helps you override aesthetic styling in the legend and make the individual circles in the legend bigger.
 
-```{r}
+```{r }
 ggplot() +
   geom_sf(data = pa, fill = "seashell3", col = "white", alpha = 0.9)+
   geom_sf(data = jersey, fill = "seashell3", col = "white", alpha = 0.9)+
@@ -610,5 +663,51 @@ ggplot() +
     plot.margin = margin(10, 10, 10, 10))+
   guides(color = guide_legend(override.aes = list(size = 3))) #override aesthetic styling
 ```
+
+Another thing that is new is scale_color_manual which allows us to set the colours for catagorical values. Here, I specify a seperate colour for each homeownership type. 
+
+Finally, guides(color = guide_legend(override.aes = list(size = 3)) means that in the legend, the size of color markers/points will be set to 3, regardless of their actual size in the plot (which is 0.8).
+
+The last thing to note is that you can animate maps as well! Simply add the transition state as previously and use the animate funciton. 
+
+```{r}
+plot6 <- ggplot() +
+  geom_sf(data = pa, fill = "seashell3", col = "white", alpha = 0.9)+
+  geom_sf(data = jersey, fill = "seashell3", col = "white", alpha = 0.9)+
+  geom_sf(data = philly_water, fill = "dodgerblue4", col = "dodgerblue", alpha = 0.8) +
+  geom_sf(data = philly, fill = "seashell", color = NA, alpha = 0.6)+
+  geom_point(data = affordablehousing, 
+          aes(x = X, y = Y, color = PROJECT_TYPE), #specify X and Y
+          size = 2, alpha = 0.9)+
+  scale_color_manual(values = c("Homeownership" = "#7fc97f", #create the color scale
+                               "Rental" = "#beaed4",
+                               "Special Needs" = "#fdc086"),
+                    name = "Project Type") +
+  theme_void() +
+  labs(
+    title = "Affordable Housing in Philadelphia",
+    subtitle = "Year {closest_state}"
+  )+
+  theme(
+    text = element_text(color = "steelblue4"),
+    plot.title = element_text(face = "bold", hjust = 0.5, size = 16, vjust = 0.5),
+    legend.title = element_text(hjust = 0.5),
+    legend.position = "bottom",
+    legend.key.size = unit(1, "cm"),
+    plot.margin = margin(10, 10, 10, 10))+
+  guides(color = guide_legend(override.aes = list(size = 3))) +
+  transition_states(FISCAL_YEAR_COMPLETE)+
+  ease_aes('linear')
+
+#plot6animate <- animate(plot6, 
+                        #nframes = 29,
+                        #fps = 0.8,
+                        #width = 800, 
+                        #height = 600)
+
+#anim_save("plot6.gif", plot6animate)
+```
+
+![affordable_housing_anim](plot6.gif)
 
 And there is our map!
